--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
   </thead>
 
   <tbody>
-    <%= render(partial: "post", collection: @posts) %>
+    <%-#= render(partial: "post", collection: @posts) -%>
     <% @posts.each do |post| %>
       <%= render(partial: "post", locals: { post: post }) %>
     <% end %>
